<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BaseRootStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".presentation.ui.fragments.authentication.signUp.SignUpFragment"
    tools:ignore="MissingConstraints">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_cpi_center_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tv_wellcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cofo_sans_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_cpi_center_text" />

    <TextView
        android:id="@+id/tv_bottom_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/register_to_continue"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wellcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_username"
        style="@style/AuthenticationTextInputLayout"
        android:layout_marginTop="72dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/tv_bottom_welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"
            android:lines="1"
            android:maxLength="12"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        style="@style/AuthenticationTextInputLayout"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tf_username"
        app:passwordToggleDrawable="@drawable/password_toggle_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            style="@style/AuthenticationTextInputEditTextWithPasswordToggling" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_confirm_password"
        style="@style/AuthenticationTextInputLayout"
        android:hint="@string/confirm_password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/tf_password"
        app:passwordToggleDrawable="@drawable/password_toggle_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_password"
            style="@style/AuthenticationTextInputEditTextWithPasswordToggling" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/lola"
        android:fontFamily="@font/roboto"
        android:foreground="?android:attr/actionBarItemBackground"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_confirm_password" />

    <ProgressBar
        android:id="@+id/cpi_sign_up"
        style="@style/BaseProgressBar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="15dp"
        android:translationZ="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_sign_up" />


    <TextView
        android:id="@+id/tv_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/blue_oyster_cult"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />
</androidx.constraintlayout.widget.ConstraintLayout>