<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="30dp"
    android:background="@color/darkBlue"
    android:maxHeight="560dp"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/im_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_button_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_withdrawal_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/withdrawal_confirmation"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintTop_toBottomOf="@id/im_close" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_you_will_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/you_will_get"
        android:textColor="@color/blueSentinel"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_confirmation" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_money_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_you_will_get"
        app:layout_constraintTop_toBottomOf="@id/tv_you_will_get"
        tools:text="100" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="6dp"
        android:text="@string/usd"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_money_count"
        app:layout_constraintStart_toEndOf="@id/tv_money_count" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_withdraw_to"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="34dp"
        android:gravity="start"
        android:text="@string/withdraw_to"
        android:textColor="@color/blueSentinel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_money_count" />

    <ImageView
        android:id="@+id/im_card_processing_network"
        android:layout_width="26dp"
        android:layout_height="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_to"
        tools:src="@drawable/ic_visa" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:gravity="start"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintStart_toEndOf="@id/im_card_processing_network"
        app:layout_constraintTop_toBottomOf="@id/tv_withdraw_to"
        tools:text="************1111" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_withdrawal_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        android:text="@string/withdrawal_amount"
        android:textColor="@color/blueSentinel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/im_card_processing_network" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_amount_to_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toBottomOf="@id/tv_withdrawal_amount"
        tools:text="100.00 USD" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_founds_will_be_available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/founds_will_be_available"
        android:textColor="@color/blueSentinel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_amount_to_withdraw" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_founds_availability_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/within_30_minutes"
        android:textColor="@color/white"
        app:fontFamily="@font/roboto_light"
        app:layout_constraintTop_toBottomOf="@id/tv_founds_will_be_available" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/change"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:backgroundTint="@color/lola"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="16dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        app:backgroundTint="@color/safetyOrange"
        app:cornerRadius="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_change" />
</androidx.constraintlayout.widget.ConstraintLayout>